5.0a4 -> 5.0b1:
    - jbj: stub in the rpmnss.[ch] implementation.
    - jbj: pluggable RSA/DSA signature verification framework.
    - rpm.org: Rename _rpmdbMatchIterator -> rpmdbMatchIterator_s.
    - jbj: split out implementation specific storage from pgpDig.
    - jbj: create rpmbc.c and rpmbc.h to hide beecrypt signature internals.
    - jbj: hide additional beecrypt RSA/DSA signature verification.
    - jbj: add toy methods to hide beecrypt RSA/DSA signature verification.
    - rpm.org: Split digest-stuff out of rpmio_internal to separate header.
    - rpm.org: Eliminate copy-paste fd digest stealing, stuff into rpmio_internal.
    - rpm.org: Add doxygen grouping to rpmte methods.
    - rpm.org: Add doxygen grouping to rpmds methods.
    - rpm.org: Lose the useless rpmrc python stuff, group macro handling to rpmmacro-py.
    - rpm.org: rpmpgp doxygen tagging.
    - rpm.org: Add bunch of missing rpmts doxygen groupings.
    - rpm.org: Move file state defs to rpmfi where they logically belong.
    - rpm.org: Move file type enums to rpmfi where it logically belongs.
    - rpm.org: Move RPMFILE_* file attributes to rpmfi.h.
    - rpm.org: Move file action enums to rpmfi where they logically belong.
    - rpm.org: Move rpmprobFilterFlag enums to rpmps where they logically belong
    - rpm.org: Move rpmtransFlags enums to rpmts.h where it logically belongs.
    - jbj: hijack rse's versioning name space, add to *.rpm packages too.
    - jbj: fix: rpmbuild -ba dir/foo.spec was broken.
    - jbj: arbitrary tags w RPM_STRING_ARRAY_TYPE default type, append assumed.
    - jbj: eliminate tagName "(unknown)" failure, return "Tag_0x12345678"
    - jbj: re-enable binary, not linear, tag lookups.
    - jbj: strip leading "RPMTAG_" prefix, in tagValue lookup.
    - jbj: test arbitrary bit, not tag lookup failure, for --yaml/--xml display.
    - afb: pass level on, to %{__lzma}.
    - jbj: revert binary search, todo++.