@@ -1,4 +1,5 @@
 5.0a4 -> 5.0b1:
+    - jbj: complete rpmnss.[ch] implementation (untested).
     - jbj: stub in the rpmnss.[ch] implementation.
     - jbj: pluggable RSA/DSA signature verification framework.
     - rpm.org: Rename _rpmdbMatchIterator -> rpmdbMatchIterator_s.
